--- a/vignettes/user_guide.Rmd
+++ b/vignettes/user_guide.Rmd
@@ -186,9 +186,9 @@ General population period survival data for the UK is loaded from the supplied `
 data(UKmortality)
 
 daily_survival_males <- population_survival_rate(rate ~ age, subset(UKmortality, 
-                                                                    sex == 0))
+                                                                    sex == 'M'))
 daily_survival_females <- population_survival_rate(rate ~ age, subset(UKmortality, 
-                                                                      sex == 1))
+                                                                      sex == 'F'))
 
 plot(daily_survival_males, type="l", col="blue", xlab="days", ylab="survival")
 lines(daily_survival_females, col="red")
